# BadmintonApp

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  SETUP.md  UPDATES.md  USER_GUIDE.md
backlog/done/: TASK-001-data-layer-fixes.md  TASK-002-profile-screen-fixes.md  TASK-003-session-photo-persistence.md  TASK-004-tournament-ui-and-streak-fixes.md  TASK-005-model-roundtrip-tests.md  TASK-006-week-bucketing-tests.md  TASK-007-session-model-json-drills-reflection.md  TASK-010-session-editing-ui.md  (+44 more)
badminton_backend/: .gitignore  Dockerfile  pyproject.toml
badminton_backend/app/: __init__.py  auth.py  database.py  deps.py  jobs.py  main.py  models.py  settings.py
badminton_backend/app/routers/: auth.py  coach.py  jobs.py  match_logs.py  players.py  point_records.py  sessions.py  tags.py  tournaments.py  uploads.py
badminton_backend/deploy/: .env.example  docker-compose.yml
badminton_backend/deploy/nginx/: nginx.conf
badminton_backend/tests/: conftest.py  test_auth.py  test_coach_brief.py  test_database.py  test_deploy.py  test_jobs.py  test_match_logs.py  test_players.py  test_point_records.py  test_sessions.py  test_tags.py  test_tournaments.py  test_uploads.py
badminton_flutter/: README.md  pubspec.yaml
badminton_track/: .gitignore  config.yaml  pyproject.toml
badminton_track/src/badminton_track/: __init__.py  biomech.py  calibrate.py  cli.py  coach.py  config.py  court.py  courtmap.py  errors.py  footwork.py  metrics.py  tactics.py
badminton_track/tests/: test_biomech.py  test_calibrate.py  test_cli.py  test_coach.py  test_config.py  test_court.py  test_courtmap.py  test_footwork.py  test_metrics.py  test_tactics.py
ideas/: pool.md
research/: background-jobs.md  cv-tracking.md  fastapi-auth.md  flutter-video.md  local-llm-voice-chatbot-reference.md  local-llm.md  pose-biomechanics.md  resumable-upload.md  shuttle-tracking.md
(+214 files in other folders)
