[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "badminton-backend"
version = "0.1.0"
description = "Self-hosted accounts/players/data API for the badminton training app"
requires-python = ">=3.11"
# research/fastapi-auth.md (2026-07-06): python-jose and passlib are banned —
# critical CVE / unmaintained. PyJWT + pwdlib[argon2] is the current stack.
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.0",
    "pyjwt==2.13.0",
    "pwdlib[argon2]==0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
